# testUpload

./: build.gradle  gradle.properties  local.properties  settings.gradle
XUtils_Lib/: build.gradle
app/: AndroidManifest.xml  build.gradle  password.txt  project.properties  wfcardv360.keystore
app/assets/: useragreement-zh-CN  useragreement-zh-TW  useragreement.txt
app/assets/ivw/: 56089de1.jet  564d4820.jet
app/gradle/wrapper/: gradle-wrapper.properties
app/libs/: ijkplayer-armv5-release.aar  ijkplayer-java-release.aar
app/res/anim/: down_anim.xml
app/res/color/: add_attention_text_color.xml  camera_preview_color.xml  enable_text_color.xml  main_radio_text_color.xml  main_tab_host_title_color.xml  more_arrow_text_color.xml  selector_register_color.xml  white_gray_text_color.xml
app/res/drawable/: add_attention_selector.xml  bg_back_selector.xml  bg_back_title_selector.xml  bg_btn_black.xml  bg_btn_empty.xml  bg_btn_hollow.xml  bg_btn_hollow_selector.xml  bg_btn_normal.xml  bg_btn_pressed.xml  bg_btn_selector.xml  bg_btn_unpressed.xml  bg_btn_white_stoke.xml  bg_checkbox.xml  bg_checkbox_file.xml  bg_circle.xml  bg_circle_a_white.xml  bg_delete_image_selector.xml  bg_download_selector.xml  bg_edit_selector.xml  bg_edittext.xml  bg_email_select.xml  bg_icon_getlocation.xml  bg_like_selector.xml  bg_line_nomal.xml  bg_line_press.xml  bg_line_selector.xml  bg_main_tab_item_home.xml  bg_main_tab_item_persional.xml  bg_main_tab_item_picture.xml  bg_main_tab_item_squre.xml  bg_phone_select.xml  bg_picture_qulity.xml  bg_prgress_drawble.xml  bg_radio_select.xml  bg_save_selector.xml  bg_share_orange_selector.xml  bg_share_selector.xml  bg_spinner.xml  bg_video_time.xml  bg_wifi_add.xml  (+79 more)
app/res/layout/: _loading_layout_empty.xml  _loading_layout_error.xml  _loading_layout_loading.xml  activity_attention_list.xml  activity_camsetadv.xml  activity_camsetname.xml  activity_camsetpwd.xml  activity_country_code.xml  activity_edit_bank_info.xml  activity_edit_personalfor.xml  activity_feed_back.xml  activity_file_grid.xml  activity_file_grid_new.xml  activity_formal_update.xml  activity_get_video_frame.xml  activity_gps_video.xml  activity_guanyu.xml  activity_guide.xml  activity_hisi_preview.xml  activity_hisi_setting.xml  activity_hisi_sub_setting.xml  activity_illegal_report.xml  activity_illegal_type.xml  activity_jieli_camera.xml  activity_jieli_password_setting.xml  activity_jieli_setting.xml  activity_jieli_wifi_name.xml  activity_like_user_list.xml  activity_local_album.xml  activity_local_album_new.xml  activity_login.xml  activity_main_self.xml  activity_main_tab.xml  activity_mstar_file_photo.xml  activity_mstar_preview.xml  activity_mstar_settings.xml  activity_mstar_sub_setting.xml  activity_my_shared.xml  activity_novatek_camera.xml  activity_novatek_download_picture.xml  (+125 more)
app/res/menu/: menu_download.xml  menu_share.xml  picker_menu.xml  setting.xml
app/res/values/: arrays.xml  arrays_hisi.xml  attrs.xml  colors.xml  dimen.xml  dimens.xml  ids.xml  strings.xml  styles.xml  values-loading-layout.xml
app/res/values-ja-rJP/: strings.xml
app/res/values-pt/: strings.xml
app/res/values-ru/: strings.xml
app/res/values-uk/: strings.xml
app/res/values-v21/: styles.xml
app/res/values-zh-rCN/: strings.xml
app/res/values-zh-rTW/: smssdk_arrays.xml  smssdk_errors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
medialib/: CMakeLists.txt  build.gradle
medialib/src/androidTest/java/com/ligo/medialib/: ExampleInstrumentedTest.java
medialib/src/main/: AndroidManifest.xml
medialib/src/main/assets/: calibration.gson
medialib/src/main/cpp/: FfmpegPlayer.cpp  FfmpegPlayer.h  H264toJpg.cpp  H264toJpg.h  H264toJpg_jni.cpp  HbxIosAudioPlay.cpp  HbxIosAudioPlay.h  MediaDecoder.cpp  VideoCut.cpp  VideoCut.h  VideoTranslate.cpp  VideoTranslate.h  YuvRenderer.cpp  YuvRenderer.h  YuvRenderer_jni.cpp  ffmpeg.cpp  ffmpeg.h  hbxList.c  hbxList.h  localdefines.h  log.h  objectarray.h  public.h  utilbase.c  utilbase.h  video-util.cpp
medialib/src/main/cpp/hbxFisheye/: HbxFishEyeList.cpp  HbxFishEyeManager.cpp  HbxFishEyeManager.h  HbxFishEyeMatlab.cpp  HbxFishEyeMatlab.h  HbxFishEyeParameters.cpp  HbxFishEyeParameters.h  HbxFishEyePublic.h  HbxReadFileInfo.cpp  HbxReadFileInfo.h  HbxVerticesFile.cpp  HbxVerticesFile.h  HbxWriteFileInfo.cpp  HbxWriteFileInfo.h  Hjni_HbxFishEye.cpp  Hjni_HbxFishEye.h  hbxFishEyeList.h
medialib/src/main/cpp/medialib/: HbxAndroidAudioPlay.cpp  HbxAndroidAudioPlay.h  HbxAudioPlay.cpp  HbxAudioPlay.h  HbxAudioThread.cpp  HbxAudioThread.h  HbxBaseFile.cpp  HbxBaseFile.h  HbxBaseTasksCheduler.cpp  HbxBaseTasksCheduler.h  HbxFrame.cpp  HbxFrame.h  HbxListFrame.cpp  HbxListFrame.h  HbxMediaPlay.cpp  HbxMediaPlay.h  HbxReadThread.cpp  HbxReadThread.h  HbxThread.cpp  HbxThread.h  HbxVideoDecodec.cpp  HbxVideoDecodec.h  HbxVideoThread.cpp  HbxVideoThread.h  HbxWavePlay.cpp  HbxWavePlay.h  Livevideo.cpp  Livevideo.h  native-lib.cpp  sunInfoPaser.cpp  sunInfoPaser.h  videoplayer.cpp  videoplayer.h
medialib/src/main/cpp/opengles/: cameraShader.c  cameraShader.h  esUtil.c  esUtil.h  matrix.c
medialib/src/main/cpp/shapelib/: CHbxFishEye.cpp  CHbxFishEye.h  CHbxLsxFishEye.cpp  CHbxLsxFishEye.h  Jni_ShapeManager.cpp
medialib/src/main/java/com/Hjni/: HbxFishEye.java  MediaInfo.java
medialib/src/main/java/com/ligo/medialib/: DecoderUtils.java  FfmpegVideoView.java  H264toJpg.java  MediaPlayLib.java  Packet.java  PanoCamViewLocal.java  PanoCamViewOnline.java  PanoImageView.java  Point2f.java  ShaderUtil.java  Triangle3f.java  Vertice5f.java  VideoDecoder.java  VideoUtilLib.java  YUVRenderer.java
medialib/src/main/java/com/ligo/medialib/opengl/: Calibration.java  CalibrationManager.java  IShowType.java  ImageRender.java  ShapeManagerJni.java  ShowType2Screen.java  ShowType4Screen.java  ShowTypeCircle.java  ShowTypeCylinder.java  ShowTypeHemisphere.java  ShowTypeProxy.java  ShowTypeSrc.java  VideoRenderHard.java  VideoRenderYuv.java
medialib/src/test/java/com/ligo/medialib/: ExampleUnitTest.java
oss-android-sdk/: build.gradle
(+704 files in other folders)
